# robot_framework_ros

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  ArmedStateManagerNode_8hpp.html  ArmedStateManagerNode_8hpp.js  ArmedStateManagerNode_8hpp__incl.map  ArmedStateManagerNode_8hpp__incl.md5  ArmedStateManagerNode_8hpp_source.html  BaseNode_8hpp.html  BaseNode_8hpp.js  BaseNode_8hpp__dep__incl.map  BaseNode_8hpp__dep__incl.md5  BaseNode_8hpp__incl.map  BaseNode_8hpp__incl.md5  BaseNode_8hpp_source.html  BasicTeleopControlNode_8hpp.html  BasicTeleopControlNode_8hpp.js  BasicTeleopControlNode_8hpp__incl.map  BasicTeleopControlNode_8hpp__incl.md5  BasicTeleopControlNode_8hpp_source.html  CMakeLists.txt  CoreUtility_8hpp.html  CoreUtility_8hpp.js  CoreUtility_8hpp__incl.map  CoreUtility_8hpp__incl.md5  CoreUtility_8hpp_source.html  Doxyfile  DoxygenHome.md  ExampleNode_8hpp.html  ExampleNode_8hpp.js  ExampleNode_8hpp__incl.map  ExampleNode_8hpp__incl.md5  ExampleNode_8hpp_source.html  LICENSE  Legend.puml  README.md  ServoHatNode_8hpp.html  ServoHatNode_8hpp.js  ServoHatNode_8hpp__incl.map  (+327 more)
.github/: pull_request_template.md  release.yml
.github/workflows/: build-test.yml  doxygen-generate.yml
Systems/: CMakeLists.txt
Systems/Navigation/: CMakeLists.txt
Systems/Navigation/Subsystems/NavigationExecutor/Nodes/DriveExecutor/TankDriveExecutorNode/: CMakeLists.txt  TankDriveExecutorNode.cpp  TankDriveExecutorNode.hpp
Systems/Navigation/Subsystems/NavigationExecutor/Nodes/DriveExecutor/TankDriveExecutorNode/doc/: TankDriveExecutorNode.md
Systems/Navigation/Subsystems/NavigationExecutor/Nodes/DriveExecutor/TankDriveExecutorNode/doc/puml/: TankDriveExecutorNodeClassDiagram.puml
Systems/Navigation/Subsystems/NavigationExecutor/Nodes/DriveExecutor/TankDriveExecutorNode/launch/: tankDriveExecutor_node.launch
Systems/Navigation/Subsystems/NavigationExecutor/Nodes/DriveExecutor/TankDriveExecutorNode/src/doc/: ExampleNode.md
Systems/Navigation/Subsystems/NavigationExecutor/Nodes/DriveExecutor/TankDriveExecutorNode/src/doc/puml/: ExampleNodeClassDiagram.puml
Systems/Navigation/Subsystems/NavigationExecutor/Nodes/DriveExecutor/TankDriveExecutorNode/test/: CMakeLists.txt  test_TankDriveExecutorNode.cpp  test_TankDriveExecutorNode.test
Systems/Navigation/Subsystems/NavigationExecutor/Processes/DriveExecutor/TankDriveExecutorNode/: CMakeLists.txt
Systems/Navigation/Subsystems/NavigationExecutor/Processes/DriveExecutor/TankDriveExecutorNode/doc/: TankDriveExecutorNode.md
Systems/Navigation/Subsystems/NavigationExecutor/Processes/DriveExecutor/TankDriveExecutorNode/launch/: TankDriveExecutorNode.launch
Systems/Navigation/Subsystems/NavigationExecutor/Processes/DriveExecutor/TankDriveExecutorNode/src/: TankDriveExecutorNode.cpp  TankDriveExecutorNode.hpp  test_node.cpp
Systems/Safety/Subsystems/ModeManager/Nodes/ArmedStateManager/: ArmedStateManagerNode.cpp  ArmedStateManagerNode.hpp  CMakeLists.txt
Systems/Safety/Subsystems/ModeManager/Nodes/ArmedStateManager/doc/: ArmedStateManagerNode.md
Systems/Safety/Subsystems/ModeManager/Nodes/ArmedStateManager/doc/puml/: ArmedStateManagerNodeClassDiagram.puml
Systems/Safety/Subsystems/ModeManager/Nodes/ArmedStateManager/launch/: ArmedStateManager_node.launch
Systems/Safety/Subsystems/ModeManager/Nodes/ArmedStateManager/test/: CMakeLists.txt  test_ArmedStateManagerNode.cpp  test_ArmedStateManagerNode.test
Systems/UserInterface/Subsystems/RemoteControl/Nodes/TeleopControl/BasicTeleopControlNode/: BasicTeleopControlNode.cpp  BasicTeleopControlNode.hpp  CMakeLists.txt
Systems/UserInterface/Subsystems/RemoteControl/Nodes/TeleopControl/BasicTeleopControlNode/doc/: BasicTeleopControlNode.md
Systems/UserInterface/Subsystems/RemoteControl/Nodes/TeleopControl/BasicTeleopControlNode/doc/puml/: BasicTeleopControlNodeClassDiagram.puml
Systems/UserInterface/Subsystems/RemoteControl/Nodes/TeleopControl/BasicTeleopControlNode/launch/: basicTeleopControl_node.launch
Systems/UserInterface/Subsystems/RemoteControl/Nodes/TeleopControl/BasicTeleopControlNode/test/: CMakeLists.txt  test_BasicTeleopControlNode.cpp  test_BasicTeleopControlNode.test
Systems/doc/: RobotFrameworkROSSystemPackageDiagram.puml
Systems/launch/: robot.launch
core/: CMakeLists.txt
core/BaseNode/: BaseNode.cpp  CMakeLists.txt
core/BaseNode/test/: test_baseNode.cpp
core/ExampleNode/: CMakeLists.txt  ExampleNode.cpp  ExampleNode.hpp
core/utils/: CMakeLists.txt
core/utils/TranslateUtility/: CMakeLists.txt  TranslateUtility.cpp
core/utils/TranslateUtility/test/: CMakeLists.txt  test_TranslateUtility.cpp
doc/Core/: Core.md
doc/Requirements/: Requirements.md
msg/: arm_command.msg  armedstate.msg  diagnostic.msg  heartbeat.msg  nodestate.msg  ready_to_arm.msg
scripts/: dev_tools.sh  pre_commit.sh  setup_ide.sh  setup_robot.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  namespaces_0.js  namespaces_1.js  pages_0.js  pages_1.js  searchdata.js
src/: CMakeLists.txt
src/BaseNode/: BaseNode.cpp  BaseNode.hpp  CMakeLists.txt
src/BaseNode/test/: CMakeLists.txt  test_baseNode.cpp  test_baseNode.test
srv/: arm_state_change.srv
templates/: .clang-format
templates/Node/{{cookiecutter.Node}}/: CMakeLists.txt  {{cookiecutter.Node}}Node.cpp  {{cookiecutter.Node}}Node.hpp
templates/Node/{{cookiecutter.Node}}/doc/: {{cookiecutter.Node}}Node.md
templates/Node/{{cookiecutter.Node}}/doc/puml/: {{cookiecutter.Node}}NodeClassDiagram.puml
templates/Node/{{cookiecutter.Node}}/launch/: {{cookiecutter.Node}}_node.launch
templates/Node/{{cookiecutter.Node}}/test/: CMakeLists.txt  test_{{cookiecutter.Node}}Node.cpp  test_{{cookiecutter.Node}}Node.test
(+113 files in other folders)
